# ViTs_Social_Bias_Analysis

./: .gitignore  README.md  environment.yaml  environment.yml  ieat_results_backbone.csv  ieat_results_logits.csv  mask_generation.ipynb  mask_index_224.py  mask_index_256.py  mask_index_384.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml
DBSCAN/: academicgown_DBSCAN_labels.json  beaker_DBSCAN_labels.json  bra_DBSCAN_labels.json  cardigan_DBSCAN_labels.json  desk_DBSCAN_labels.json  jeans_DBSCAN_labels.json  labcoat_DBSCAN_labels.json  library_DBSCAN_labels.json  lipstick_DBSCAN_labels.json  miniskirt_DBSCAN_labels.json  notePC_DBSCAN_labels.json  oscilloscope_DBSCAN_labels.json  pajamas_DBSCAN_labels.json  stethoscope_DBSCAN_labels.json  suit_DBSCAN_labels.json  sunscreen_DBSCAN_labels.json  wig_DBSCAN_labels.json  windsor_DBSCAN_labels.json
activation_ratio/: activation_ratio.pkl  activation_ratio_beit.csv  activation_ratio_deit.csv  activation_ratio_dino.csv  activation_ratio_maskfeat.csv  activation_ratio_milan.csv  activation_ratio_moco.csv  activation_ratio_swin.csv  activation_ratio_vit.csv
bias_research/: activation_ratio.py  experiment.py  experimet.py  gradcam_utils.py  imagenet_label.py  tsne_utils.py
data/: stimuli.csv
ieat/: setup.py
ieat/ieat/: api.py  models.py  utils.py
ieat/ieat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ieat/weat/: test.py
vision_bias_analysis/: dbscan_utils.py  experiment.py  gradcam_utils.py  mask_index_224.py  mask_index_384.py  test_dict.py  tsne_utils.py
