[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision_bias_analysis"
version = "0.1.0"
description = "Social Bias in Vision Transformers - Experimental Framework"
authors = [
    { name = "T. Tsurumi", email = "t.tsurumi@student.vu.nl" },
    { name = "E. Beretta" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "absl-py==2.2.2",
    "addict==2.4.0",
    "aliyun-python-sdk-core==2.16.0",
    "aliyun-python-sdk-kms==2.16.5",
    "astunparse==1.6.3",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "contourpy==1.1.1",
    "crcmod==1.7",
    "cryptography==44.0.3",
    "cycler==0.12.1",
    "einops==0.8.1",
    "filelock==3.14.0",
    "flatbuffers==25.2.10",
    "fonttools==4.57.0",
    "fsspec==2025.3.0",
    "gast==0.4.0",
    "google-auth==2.40.1",
    "google-auth-oauthlib==1.0.0",
    "google-pasta==0.2.0",
    "grad-cam==1.5.5",
    "grpcio==1.70.0",
    "h5py==3.11.0",
    "huggingface-hub==0.31.2",
    "idna==3.10",
    "importlib_resources==6.4.5",
    "jmespath==0.10.0",
    "joblib==1.4.2",
    "keras==2.13.1",
    "kiwisolver==1.4.7",
    "libclang==18.1.1",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mat4py==0.6.0",
    "matplotlib==3.7.5",
    "mdurl==0.1.2",
    "mkl-service==2.4.0",
    "mmengine==0.10.7",
    "model-index==0.1.11",
    "modelindex==0.0.2",
    "numpy",
    "oauthlib==3.2.2",
    "opencv-python==4.11.0.86",
    "opendatalab==0.0.10",
    "openmim==0.3.9",
    "openxlab==0.1.2",
    "opt_einsum==3.4.0",
    "ordered-set==4.1.0",
    "oss2==2.17.0",
    "packaging==24.2",
    "pandas==2.0.3",
    "pillow==10.4.0",
    "protobuf==4.25.7",
    "psutil",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pyparsing==3.1.4",
    "python-dateutil",
    "pytz==2023.4",
    "pywin32==306",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.28.2",
    "requests-oauthlib==2.0.0",
    "rich==13.4.2",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "tabulate==0.9.0",
    "tensorboard==2.13.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.13.0",
    "tensorflow-estimator==2.13.0",
    "tensorflow-intel==2.13.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "tokenizers==0.20.3",
    "tomli==2.2.1",
    "torch==1.10.1",
    "torchvision==0.11.2",
    "tqdm==4.65.2",
    "transformers==4.46.3",
    "ttach==0.0.3",
    "tzdata==2025.2",
    "urllib3==1.26.20",
    "Werkzeug==3.0.6",
    "wrapt==1.17.2",
    "yapf==0.43.0",
    "zipp==3.20.2"
]

[project.urls]
Repository = "https://github.com/tti440/ViTs_Social_Bias_Analysis"

[tool.setuptools]
packages = ["bias_research", "ieat"]

[project.optional-dependencies]
dev = ["wheel"]
